<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Somed</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Arprast</string>
    <string name="nav_header_subtitle">Social media list</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="show_password">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_maps">Maps</string>
    <string name="menu_twitter">Twitter</string>
    <string name="menu_facebook">Facebook</string>
    <string name="menu_instagram">Instagram</string>
    <string name="menu_youtube">Youtube</string>
    <string name="menu_account">Accounts</string>
    <string name="menu_logout">Logout</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_submit">Submit</string>
    <string name="button_save">Save</string>

    <string name="input_customer_title">Input Data Customer</string>
    <string name="input_customer_trx_no">No</string>
    <string name="input_customer_name">Customer Name</string>
    <string name="input_customer_name_warning">Customer name cant empty</string>
    <string name="input_customer_phone_number">Phone Number</string>
    <string name="input_customer_phone_number_warning">Please input correct phone number</string>
    <string name="input_customer_address">Address</string>
    <string name="input_customer_note">Note</string>
    <string name="input_customer_measure">Measure</string>
    <string name="input_customer_price_type">Price type</string>
    <string name="input_customer_estimation_date">Estimation Date</string>
    <string name="input_customer_total_price">0</string>

    <string name="login_submit_button">Login</string>
    <string name="login_input_username_or_email">Input Username or phone number</string>
    <string name="login_input_password">Password</string>
    <string name="login_register">To register click here for <a href='https://google.com' style='color: #03A9F4;text-decoration:none' >sign up</a></string>

    <string name="sign_up_create_new_account">Create New Account</string>
    <string name="sign_up_username">Username</string>
    <string name="sign_up_telegram_id">Telegram number</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_confirmation_password">Confirmation Password</string>
    <string name="sign_up_gender">Gender</string>
    <string name="sign_up_button_save">Sign Up</string>

    <color name="whiteColor">#ffffff</color>
    <color name="redColor">#E80505</color>
    <color name="grayColor">#A1FFFFFF</color>
    <color name="hintColor">#B1B1B1</color>
    <color name="rowBg">#E4E4E4</color>
    <color name="movieTitle">#797979</color>
    <color name="yearTitle">#CC8BDA</color>
    <color name="rateTitle">#CFC767</color>
    <color name="blue">#03A9F4</color>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
