<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_login"
        android:name="com.arprast.sekawan.ui.home.LoginFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.arprast.sekawan.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_facebook"
        android:name="com.arprast.sekawan.ui.media.account.facebook.FacebookWebpageFragment"
        android:label="@string/menu_facebook"
        tools:layout="@layout/fragment_media_facebook" />

    <fragment
        android:id="@+id/nav_twitter"
        android:name="com.arprast.sekawan.ui.media.account.twitter.TwitterWebPageFragment"
        android:label="@string/menu_twitter"
        tools:layout="@layout/fragment_media_twitter" />

    <fragment
        android:id="@+id/nav_instagram"
        android:name="com.arprast.sekawan.ui.media.account.instagram.InstagramWebpageFragment"
        android:label="@string/menu_instagram"
        tools:layout="@layout/fragment_media_instagram" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.arprast.sekawan.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.arprast.sekawan.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_youtube"
        android:name="com.arprast.sekawan.ui.media.account.youtube.YoutubeWebPageFragment"
        android:label="@string/menu_youtube"
        tools:layout="@layout/fragment_media_youtube" />
        />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.arprast.sekawan.ui.media.account.AccountMain"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account_main" />
        />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.arprast.sekawan.ui.home.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_account_main" />
    />

</navigation>