<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/container"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/padding_medium"
            android:text="@string/input_customer_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/blue"
            android:textSize="25sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/input_customer_view_trx_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/padding_medium"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/blue"
            android:textSize="16sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/input_customer_view_trx_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/padding_medium"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/movieTitle"
            android:textSize="16sp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/input_customer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_customer_name"
            android:textSize="16sp"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="50"
            app:met_minCharacters="1" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/input_customer_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_customer_phone_number"
            android:textSize="16sp"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="13"
            app:met_minCharacters="8" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/input_customer_estimation_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_customer_estimation_date"
            android:textSize="16sp"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="10"
            app:met_minCharacters="6" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/input_customer_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_customer_address"
            android:textSize="16sp"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="100"
            app:met_minCharacters="5" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/input_customer_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_customer_note"
            android:textSize="16sp"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="200"
            app:met_minCharacters="5" />

    </LinearLayout>
</FrameLayout>