<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/container"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/sign_up_create_new_account"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/blue"
            android:textSize="25sp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/signup_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_username"
            android:textSize="16sp"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="30"
            app:met_minCharacters="1" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/signup_telegram_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_telegram_id"
            android:textSize="16sp"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="20"
            app:met_minCharacters="5" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_gender_layout"
            style="@style/TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_gender"
            android:textColorHint="@color/hintColor">

            <AutoCompleteTextView
                android:id="@+id/signup_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-10dp"
                android:layout_marginLeft="-10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/signup_create_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_password"
            app:boxBackgroundColor="@android:color/transparent"
            android:background="@android:color/transparent"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:textColorHint="@color/hintColor"
            app:passwordToggleEnabled="true">

            <!-- dropdown account type-->
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/signup_create_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="16sp"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="30"
                app:met_minCharacters="8" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/signup_create_password_confirmation_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_confirmation_password"
            app:boxBackgroundColor="@android:color/transparent"
            android:background="@android:color/transparent"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:textColorHint="@color/hintColor"
            app:passwordToggleEnabled="true">

            <!-- dropdown account type-->
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/signup_create_password_confirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="16sp"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="30"
                app:met_minCharacters="8" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_button_save"
            android:textAllCaps="true"
            android:textSize="16sp" />

    </LinearLayout>
</FrameLayout>