<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/container"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="161dp"
            android:gravity="center"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="34sp"
            android:layout_marginBottom="30dp"
            app:srcCompat="@mipmap/ic_login" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/login_input_username_or_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_input_username_or_email"
            android:inputType="textCapWords"
            android:textSize="16sp"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="30"
            app:met_minCharacters="8" />

        <com.google.android.material.textfield.TextInputLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_input_password"
            app:boxBackgroundColor="@android:color/transparent"
            android:background="@android:color/transparent"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:textColorHint="@color/hintColor"
            app:passwordToggleEnabled="true">

            <!-- dropdown account type-->
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/login_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="16sp"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="30"
                app:met_minCharacters="8" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_submit_button"
            android:textAllCaps="true"
            android:textSize="16sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/login_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/hintColor"
            android:text="@string/login_register"
            />

    </LinearLayout>
</FrameLayout>